--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,6 +1,4 @@
-.login-wrap, .divider, .login-wrap-center, .logo-wrap, .icon, .illustration, .title, .welcome, .copyright {
-  position: relative;
-  display: flex;
+.login-wrap {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,7 +10,7 @@
   background-size: cover;
 }
 
-.login-wrap-center, .logo-wrap, .icon, .illustration, .form-wrap, .title, .welcome {
+.login-wrap-center {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -24,56 +22,61 @@
   border-radius: 12px;
 }
 
-.logo-wrap, .icon, .illustration {
+.logo-wrap {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 45%;
   height: 100%;
 }
 
-.icon {
-  width: 150px;
-}
-
 .illustration {
-  height: 80%;
+  width: 80%;
+  height: auto;
+  margin-bottom: 20px;
 }
 
-.form-wrap, .title, .welcome {
+.form-wrap {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   width: 45%;
   height: 90%;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 12px;
+  background-color: rgba(185, 185, 185, 0.8);
+  background-image: url('../../images/introBG.jpeg');
+  background-size: cover;
 }
+
 
 .title {
   color: #333333;
   font-weight: 400;
-  font-size: 4vh;
+  font-size: 30px;
   text-align: center;
+  margin: 0;
 }
 
 .welcome {
-  color: #a9a9a9;
+  color: #333333;
   font-weight: 400;
-  font-size: 2vh;
+  font-size: 15px;
   text-align: center;
-}
-
-.copyright {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  color: #fff;
-  transform: translate(-50%);
+  margin-bottom: 20px;
 }
 
 .loginOtherSelection {
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
+  align-items: center;
 }
 
 .buttonColletion {
   display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
 }
